src/Juegardos.Website/wwwroot/css/app.css
/* ... */
.navbar-links li:hover {
    cursor: pointer;
}

    .navbar-links li a {
        text-decoration: none;
    }

.navbar-links.active {
    display: flex;
}

.toggle-button,
.search-button {
    display: flex;
    padding: 10px;
    width: 30px;
    height: 100%;
    cursor: pointer;
}

.minimized-navbar {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

    .minimized-navbar > a {
        text-decoration: none;
    }

.footer {
    text-align: center;
    color: var(--gray);
    background-color: var(--black);
    padding: 10px 10px;
}

.hide-on-mobile {
    display: none;
}

.hide-on-desktop {
    display: block;
}

@media (min-width: 768px) {
    .hide-on-mobile {
        display: block;
    }
    
    .hide-on-desktop {
        display: none;
    }

    .navbar {
        padding: 0 50px;
        flex-direction: initial;
        align-items: initial;
    }

    .navbar-links {
        display: initial;
        width: initial;
    }

    .navbar-links > ul {
        flex-direction: initial;
        width: initial;
    }

    .navbar-links > ul > li {
        padding: .5rem;
    }

    .toggle-button,
    .search-button {
        display: none;
        padding: initial;
    }

    .mega-box {
        position: absolute !important;
        top: 85px;
        opacity: 0;
        visibility: hidden;
        transition: all 0.3s ease;
    }

        .mega-box.active {
            max-height: initial;
        }

    .nav-links .mobile-item {
        display: none;
    }

    .nav-links .desktop-item {
        display: initial;
    }

    .content .row .mega-links {
        padding-left: unset;
    }

    .mega-box .content .row {
        width: unset;
    }

    .mega-box .content {
        box-shadow: 0 6px 10px rgba(0,0,0,0.15);
        flex-direction: unset !important;
        padding: 0px 200px;
    }
}

@media (min-width: 1024px) {
    .navbar {
        padding: 0 100px;
    }

    .mega-box .content {
        padding: 0px 300px;
    }
}

@media (min-width: 1440px) {
    .navbar {
        padding: 0 200px;
    }

    .mega-box .content {
        padding: 0px 500px;
    }
}

.nav-links li {
    list-style: none;
}

.nav-links li a {
    color: #f2f2f2;
    text-decoration: none;
    font-size: 18px;
    font-weight: 500;
    padding: 9px 15px;
    border-radius: 5px;
    transition: all 0.3s ease;
}

.nav-links li a:hover {
    background: #3A3B3C;
}

.nav-links .mobile-item {
    display: block;
    color: #f2f2f2;
    font-size: 20px;
    font-weight: 500;
    padding-left: 20px;
    cursor: pointer;
    border-radius: 5px;
    transition: all 0.3s ease;
}

.nav-links .desktop-item {
    display: none;
}

.mega-box-toggle {
    display: flex;
    align-items: center;
}

.mega-box {
    position: static;
    left: 0;
    top: 65px;
    opacity: 1;
    visibility: visible;
    max-height: 0px;
    overflow: hidden;
    width: 100%;
    z-index: -1;
}

    .mega-box.active {
        top: 52px;
        opacity: 1;
        visibility: visible;
        z-index: 3;
        max-height: 100%;
    }

    .mega-box .content {
        background: var(--primary-normal);
        display: flex;
        justify-content: space-between;
        box-shadow: none;
        flex-direction: column;
    }

    .mega-box .content .row {
        width: calc(25% - 30px);
        line-height: 45px;
        width: 100%;
    }

.content .row .mega-links {
    margin-left: -40px;
    padding-left: 15px;
}

.row .mega-links li {
    padding: 0 20px;
    margin: 0;
}

.row .mega-links li a {
    padding: 0 20px;
    display: block;
}

.row .mega-links li a:hover {
    color: #f2f2f2;
}

#menu-btn:checked ~ .nav-links {
    left: 0%;
}

.backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -2;
    overflow-x: hidden;
    overflow-y: auto;
    width: 100vw;
    height: 100vh;
    background-color: #000;
    opacity: 0;
    transition: opacity .5s;
}

    .backdrop.show {
        z-index: 2;
    }

        .backdrop.show.opacity-background {
            opacity: 1;
            background-color: rgb(0 0 0 / 80%);
        }

.modal {
    left: auto;
    margin-right: auto;
    margin-left: auto;
    z-index: -1;
    display: block;
    max-width: 500px;
    background-color: var(--primary-normal);
    border-radius: 0.3rem;
    transition: transform .4s ease-in-out;
    transform: scale(0.8);
    visibility: hidden;
}

    .modal:not(.expanded) {
        position: absolute;
        top: 30vh;
        left: 0;
        right: 0;
        margin: 0 auto;
    }

    .modal.show {
        visibility: visible;
        z-index: 3;
        transform: scale(1);
    }

    .modal.expanded {
        max-width: 800px;
        margin: 1.75rem auto;
        position: relative;
        width: auto;
        background-color: var(--primary-dark);
    }

        .modal.expanded .modal-header {
            display: none;
        }

        .modal.expanded .modal-body {
            padding: 0;
        }

.modal-header {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 1rem;
    border-bottom: 1px solid var(--white);
}

    .modal.expanded .modal-header {
        border: none;
    }

.modal-header > i {
    padding: 10px;
}

    .modal-header > i:hover {
        cursor: pointer;
    }

.modal-title {
    margin-bottom: 0;
    line-height: 1.5;
}

.modal-body {
    position: relative;
    flex: 1 1 auto;
    padding: 1rem;
}

    .modal-body > form > div {
        margin: 20px 0;
    }

    .modal-body > form > div > label {
        display: block;
        margin-bottom: 5px;
    }

    .modal-body > form > div.links {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .modal-body > form > div.links > div {
        display: flex;
        flex-direction: column;
    }
/* ... */

